# battery-health-analytics

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.clinerules/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer.yml  ci.yml
docs/: projectbrief.md
notebooks/: Untitled.ipynb  battery_degradation.ipynb  cleaning.ipynb  data_extract.ipynb  modeling.ipynb
papers/: adaptive_dae.tex
src/battery_health/: quadrature_compare.py
src/battery_health/multi_aging_exp/: data_import.py  feature_extraction.py  load.py
src/battery_health_analytics/: __about__.py  __init__.py
tests/: test_data_import.py  test_iteration_demo.py
