[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "battery-health-analytics"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Sean Jennings", email = "sean.jennings1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Sean Jennings/battery-health-analytics#readme"
Issues = "https://github.com/Sean Jennings/battery-health-analytics/issues"
Source = "https://github.com/Sean Jennings/battery-health-analytics"

[tool.hatch.version]
path = "src/battery_health_analytics/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/battery_health_analytics tests}"

[tool.coverage.run]
source_pkgs = ["battery_health_analytics", "tests"]
branch = true
parallel = true
omit = [
  "src/battery_health_analytics/__about__.py",
]

[tool.coverage.paths]
battery_health_analytics = ["src/battery_health_analytics", "*/battery-health-analytics/src/battery_health_analytics"]
tests = ["tests", "*/battery-health-analytics/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
