[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "battery-health"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Sean Jennings", email = "sean.jennings1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib"
]

[project.urls]
Documentation = "https://github.com/Sean Jennings/battery-health-analytics#readme"
Issues = "https://github.com/Sean Jennings/battery-health-analytics/issues"
Source = "https://github.com/Sean Jennings/battery-health-analytics"

[tool.hatch.version]
path = "src/battery_health/__about__.py"

[tool.hatch.envs.dev]
skip-install = false
extra-dependencies = [
  # Jupyter
  "notebook",
  "jupyterlab-vim",
]

[tool.hatch.envs.dev.scripts]
server = "jupyter lab"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/battery_health tests}"

[tool.coverage.run]
source_pkgs = ["battery_health", "tests"]
branch = true
parallel = true
omit = [
  "src/battery_health/__about__.py",
]

[tool.coverage.paths]
battery_health = ["src/battery_health", "*/battery-health-analytics/src/battery_health"]
tests = ["tests", "*/battery-health-analytics/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
